--- a/company.html
+++ b/company.html
@@ -63,7 +63,7 @@
                                 <div class="accordion-content">
                                     <a href="company.html" class="index-more">-会社概要</a>
                                     <a href="company/message.html" class="index-more">-代表挨拶</a>
-                                    <a href="company/mission.html" class="index-more">-ビジョン・経営理念&企業理念</a>
+                                    <a href="company/mission.html" class="index-more">-経営理念&企業理念</a>
                                     <a href="company.html#exective-members" class="index-more">-グループ役員一覧</a>
                                     <a href="company.html#group-companys" class="index-more">-グループ企業一覧</a>
                                     <a href="company/partnar.html" class="index-more">-提携先企業一覧</a>
@@ -149,7 +149,7 @@
               </a>
             </li>
             <li class=" wp-block-navigation-item wp-block-navigation-link">
-              <a class="wp-block-navigation-item__content" href="company/mission.html"><span class="wp-block-navigation-item__label">ビジョン</span>
+              <a class="wp-block-navigation-item__content" href="company/mission.html"><span class="wp-block-navigation-item__label">経営理念&企業理念</span>
               </a>
             </li>
           </div>
@@ -1356,7 +1356,7 @@
                           <div class="accordion-content">
                               <a href="company.html" class="index-more">-会社概要</a>
                               <a href="company/message.html" class="index-more">-代表挨拶</a>
-                              <a href="company/mission.html" class="index-more">-ビジョン・経営理念&企業理念</a>
+                              <a href="company/mission.html" class="index-more">-経営理念&企業理念</a>
                               <a href="company.html#exective-members" class="index-more">-グループ役員一覧</a>
                               <a href="company.html#group-companys" class="index-more">-グループ企業一覧</a>
                               <a href="company/partnar.html" class="index-more">-提携先企業一覧</a>
