--- a/index.html
+++ b/index.html
@@ -3164,7 +3164,7 @@
                                             <div class="accordion-content">
                                                 <a href="company.html" class="index-more">-会社概要</a>
                                                 <a href="company/message.html" class="index-more">-代表挨拶</a>
-                                                <a href="company/mission.html" class="index-more">-ビジョン・経営理念&企業理念</a>
+                                                <a href="company/mission.html" class="index-more">-経営理念&企業理念</a>
                                                 <a href="company.html#exective-members" class="index-more">-グループ役員一覧</a>
                                                 <a href="company.html#group-companys" class="index-more">-グループ企業一覧</a>
                                                 <a href="company/partnar.html" class="index-more">-提携先企業一覧</a>
@@ -3422,9 +3422,9 @@
                                                                                         <div class="smb-section__contents-wrapper">
                                                                                             <div class="smb-section__header">
                                                                                                 <img src="img/Rewrite_logo_only.png" alt="" height="150px" class="vision-img">
-                                                                                                <h2 class="smb-section__title">GROUP VISION</h2>
+                                                                                                <h2 class="smb-section__title">MANAGEMENT PHILOSOPHY</h2>
                                                                                                 <div class="smb-section__lede-wrapper">
-                                                                                                    <div class="smb-section__lede">グループビジョン</div>
+                                                                                                    <div class="smb-section__lede">経営理念&企業理念</div>
                                                                                                 </div>
                                                                                             </div>
                                                                                             <div class="smb-section__body is-layout-constrained wp-block-section-is-layout-constrained">
@@ -3434,7 +3434,7 @@
                                                                                                 <div class="wp-block-snow-monkey-blocks-buttons smb-buttons is-content-justification-right is-layout-flex wp-container-snow-monkey-blocks-buttons-is-layout-2 wp-block-buttons-is-layout-flex">
                                                                                                     <div class="wp-block-snow-monkey-blocks-btn smb-btn-wrapper is-style-text thd_mod-arw__link --large">
                                                                                                         <a class="smb-btn" href="company/mission.html">
-                                                                                                            <span class="smb-btn__label">ビジョンを詳しく見る</span>
+                                                                                                            <span class="smb-btn__label">経営理念&企業理念を詳しく見る</span>
                                                                                                         </a>
                                                                                                     </div>
                                                                                                 </div>
@@ -3626,7 +3626,7 @@
                                 <div class="accordion-content">
                                     <a href="company.html" class="index-more">-会社概要</a>
                                     <a href="company/message.html" class="index-more">-代表挨拶</a>
-                                    <a href="company/mission.html" class="index-more">-ビジョン・経営理念&企業理念</a>
+                                    <a href="company/mission.html" class="index-more">-経営理念&企業理念</a>
                                     <a href="company.html#exective-members" class="index-more">-グループ役員一覧</a>
                                     <a href="company.html#group-companys" class="index-more">-グループ企業一覧</a>
                                     <a href="company/partnar.html" class="index-more">-提携先企業一覧</a>
