--- a/index/privacy-policy.html
+++ b/index/privacy-policy.html
@@ -120,7 +120,7 @@ rel="stylesheet">
                             </div>
                                     <div class="accordion-content">
                                         <a href="../company/message.html" class="index-more">-グループCEOメッセージ</a>
-                                        <a href="../company/mission.html" class="index-more">-ビジョン・経営理念&企業理念</a>
+                                        <a href="../company/mission.html" class="index-more">-経営理念&企業理念</a>
                                         <a href="../company.html#exective-members" class="index-more">-グループ役員一覧</a>
                                         <a href="../company.html" class="index-more">-会社概要</a>
                                         <a href="../company.html#group-companys" class="index-more">-グループ会社一覧</a>
@@ -334,7 +334,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="accordion-content">
                         <a href="../company.html" class="index-more">-会社概要</a>
                         <a href="../company/message.html" class="index-more">-代表挨拶</a>
-                        <a href="../company/mission.html" class="index-more">-ビジョン・経営理念&企業理念</a>
+                        <a href="../company/mission.html" class="index-more">-経営理念&企業理念</a>
                         <a href="../company.html#exective-members" class="index-more">-グループ役員一覧</a>
                         <a href="../company.html#group-companys" class="index-more">-グループ企業一覧</a>
                         <a href="../company/partnar.html" class="index-more">-提携先企業一覧</a>
