--- a/company/mission.html
+++ b/company/mission.html
@@ -159,7 +159,7 @@
           <div class="m-kv__inner">
             <h1 class="m-kv__ttl">
               <span class="m-kv__ttl--ja">経営理念&企業理念</span>
-              <span class="m-kv__ttl--en">Management Philosophy</span>
+              <span class="m-kv__ttl--en">Philosophy</span>
             </h1>
           </div>
         </div>
