--- a/index.html
+++ b/index.html
@@ -3422,7 +3422,7 @@
                                                                                         <div class="smb-section__contents-wrapper">
                                                                                             <div class="smb-section__header">
                                                                                                 <img src="img/Rewrite_logo_only.png" alt="" height="150px" class="vision-img">
-                                                                                                <h2 class="smb-section__title">MANAGEMENT PHILOSOPHY</h2>
+                                                                                                <h2 class="smb-section__title">PHILOSOPHY</h2>
                                                                                                 <div class="smb-section__lede-wrapper">
                                                                                                     <div class="smb-section__lede">経営理念&企業理念</div>
                                                                                                 </div>
