--- a/company/mission.html
+++ b/company/mission.html
@@ -186,7 +186,7 @@
             <div class="l-contents__inner">
               <div class="l-section">
                 <div class="m-lead">
-                  <h2 class="m-lead__ttl">Management Philosophy</h2>
+                  <h2 class="m-lead__ttl">Philosophy</h2>
                   <h3 class="m-lead__ttl-3">REWRITE QUALITY</h3>
                   <p class="m-lead__txt">
                  
