--- a/adoption.html
+++ b/adoption.html
@@ -145,7 +145,7 @@
       <div class="l-contents">
         <div class="l-section pb0">
           <h2 class="p-recruit__leadTtl">テキストテキスト<br class="u-sp"><!-- <span>””</span> -->テキストテキストテキスト</h2>
-          <ul class="m-bnrList m-bnrList--flex m-bnrList--mt">
+          <ul class="m-bnrList m-bnrList--flex m-bnrList--mt recruit-tab">
             <li class="m-bnrList__item m-bnrList__item--sizeL">
               <a class="m-circleBtn-element" href="adoption/executive.html">
                 <div class="m-bnrList__img">
@@ -206,13 +206,13 @@
                 <span class="m-h2ttl--ja">会社を知る</span>
                 <span class="m-h2ttl--en">About Company</span>
               </h2>
-              <p class="m-txt u-fw--bold u-fs--l">リライトホールディングスの<br>経営理念&企業理念についてご紹介します。</p>
+              <p class="m-txt u-fw--bold u-fs--l">リライトホールディングスの<br>代表挨拶についてご紹介します。</p>
               <div class="m-arrowBtn m-arrowBtn--sizeS m-arrowBtn--mt40">
-                <a class="m-arrowBtn-hover" href="adoption/about-company.html">もっと見る</a>
+                <a class="m-arrowBtn-hover" href="company/message.html">もっと見る</a>
               </div>
             </div>
           </div>
-          <div class="m-imgTxtWide__bg m-imgTxtWide__bg--company"></div>
+          <!-- <div class="m-imgTxtWide__bg m-imgTxtWide__bg--company"></div> -->
         </div>
       </div>
     </div>
@@ -247,13 +247,13 @@
         <div class="m-imgTxtWide">
           <div class="m-imgTxtWide__inner">
             <div class="m-imgTxtWide__wrap m-imgTxtWide__wrap--reverse">
-              <h2 class="m-h2ttl">
+              <!-- <h2 class="m-h2ttl">
                 <span class="m-h2ttl--ja">仕事を知る</span>
                 <span class="m-h2ttl--en">About Works</span>
-              </h2>
-              <p class="m-txt u-fw--bold u-fs--l">業務内容や「1日の仕事の流れ」をご紹介します。</p>
+              </h2> -->
+              <p class="m-txt u-fw--bold u-fs--l">経営理念&企業理念についてご紹介します。</p>
               <div class="m-arrowBtn m-arrowBtn--sizeS m-arrowBtn--mt40">
-                <a class="m-arrowBtn-hover" href="adoption/about-work.html">もっと見る</a>
+                <a class="m-arrowBtn-hover" href="company/mission.html">もっと見る</a>
               </div>
             </div>
           </div>
@@ -521,8 +521,8 @@
           </div> -->
           <div class="m-arrowBtn m-arrowBtn--sizeL m-arrowBtn--mAuto m-arrowBtn--mt40">
             <a class="m-arrowBtn-hover" href="contact.html">
-              <span class="m-arrowBtn-inline">
-                <span class="m-contact-icon"><img loading="lazy" decoding="async" src="/assets/img/common/contact_icon.svg" alt=""></span>
+              <!-- <span class="m-arrowBtn-inline">
+                <span class="m-contact-icon"><img loading="lazy" decoding="async" src="/assets/img/common/contact_icon.svg" alt=""></span> -->
                 採用に関するお問い合わせ
               </span>
             </a>
