--- a/company/message.html
+++ b/company/message.html
@@ -5,6 +5,7 @@
 			<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, viewport-fit=cover">
 		<title>TOP MESSAGE</title>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@200..900&display=swap" rel="stylesheet">
 <meta name='robots' content='max-image-preview:large' />
 	<style>img:is([sizes="auto" i], [sizes^="auto," i]) { contain-intrinsic-size: 3000px 1500px }</style>
 			<meta name="description" content="クリエイティブ、オペレーション、イベント、マネージメントサポートといった様々なプロフェッショナル集団が連動し、“ワクワク体験”ができる「遊び場」を提供する、トランジットグループの公式ウェブサイトです。">
@@ -580,40 +581,53 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div class="wp-block-snow-monkey-blocks-section smb-section smb-section--fit thd_top-message js-inview"><div class="smb-section__inner"><div class="c-container"><div class="smb-section__contents-wrapper"><div class="smb-section__header"><h2 class="smb-section__title">TOP MESSAGE</h2><div class="smb-section__lede-wrapper"><div class="smb-section__lede">代表挨拶</div></div></div><div class="smb-section__body is-layout-constrained wp-block-section-is-layout-constrained">
 <div class="wp-block-columns thd_top-message__content is-layout-flex wp-container-core-columns-is-layout-1 wp-block-columns-is-layout-flex wp-block-columns-message">
 <div class="wp-block-column thd_top-message__detail is-layout-flow wp-block-column-is-layout-flow">
-<h2 class="wp-block-heading is-style-plain thd_top-message__copy">テキストテキストテキスト<br class="--desktop">テキストテキスト<br>テキストテキストテキストテキストテキスト</h2>
+<h2 class="wp-block-heading is-style-plain thd_top-message__copy">未来を切り拓き、日本中を元気にしたい！
+  <!-- <br class="--desktop">テキストテキスト<br>テキストテキストテキストテキストテキスト -->
+</h2>
 
 
 
 <div class="wp-block-group thd_top-message__text is-layout-constrained wp-block-group-is-layout-constrained">
-<p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト。<br>テキストテキストテキストテキストテキスト</p>
+<p>私は24歳で起業を志し、20代には20を超える事業立ち上げを経験して参りました。<br><br>
+  沢山の事業に挑戦する中で、失敗や批判を受ける場面は数多くありましたし、日本特有の利権の壁、信頼していた仲間に裏切られることを幾度も経験してきました。<br><br>
+  その経験から肌で感じたことは、起業家は誰にも相談できず、悩み続けて、事業が進まない立ち行かなくなるケースが散見されます。<br><br>
+  勿論、その先に成功という未来はないのです。<br><br>
+  これから起業する経営者たちは、私と同じような遠回りをして欲しくないという強い想いがあります。<br><br>
+  これからも様々な事業を設計し続ける連続起業家として活動し、1人でも多くの経営者のサポートができれば幸いです。
+</p>
 
 
 
-<p>テキストテキストテキストテキストテキスト<br>テキストテキストテキストテキストテキストテキストテキスト</p>
+<!-- <p>テキストテキストテキストテキストテキスト<br>テキストテキストテキストテキストテキストテキストテキスト</p> -->
 
 
 
-<p>○○○○年○○月〇日</p>
+<p>2025年4月1日</p>
 
 
 
-<p class="thd_top-message__text__position">REWRITE HOLDINGS INC.</p>
+<p class="message-company-name">株式会社リライトホールディングス</p>
+<div class="message-nameposition">
+  <div class="message-position-wrap">
+    <p class="message-position">代表取締役</p>
+  </div>
+  <p class="message-japanese-name">広永 勝太</p>
+</div>
 
-
-
-<p class="thd_top-message__text__name">Shota Hironaga</p>
+<!-- <p class="thd_top-message__text__position">REWRITE HOLDINGS INC.</p>
+<p class="thd_top-message__text__name">Shota Hironaga</p> -->
 </div>
 </div>
 
 
 
-<div class="wp-block-column thd_top-message__img is-layout-flow wp-block-column-is-layout-flow">
+<!-- <div class="wp-block-column thd_top-message__img is-layout-flow wp-block-column-is-layout-flow">
 <figure class="wp-block-image size-large thd_top-message__img__dt"><img fetchpriority="high" class="message-img" decoding="async" width="782" height="1024" src="https://placehold.jp/375x300.png" alt="代表取締役社長 CEO　中村 貞裕" class="wp-image-613"  sizes="(max-width: 782px) 100vw, 782px" /></figure>
 
 
 
 <figure class="wp-block-image size-full thd_top-message__img__mb"><img decoding="async" width="750" height="600" src="https://placehold.jp/375x300.png" alt="代表取締役社長 CEO　中村 貞裕" class="wp-image-614"  sizes="(max-width: 750px) 100vw, 750px" /></figure>
-</div>
+</div> -->
 </div>
 </div></div></div></div></div>
 
