--- a/adoption/about-company.html
+++ b/adoption/about-company.html
@@ -107,10 +107,10 @@
                             <button class="toggle-btn">＋</button>
                         </div>
                                 <div class="accordion-content">
-                                    <a href="../contact/interviw.html" class="index-more">-会社・取材に関するお問い合わせ</a>
-                                    <a href="../contact/adoption.html" class="index-more">-採用に関するお問い合わせ</a>
-                                    <a href="../contact/cooperation.html" class="index-more">-業務提携に関するお問い合わせ</a>
-                                    <a href="../contact/sales.html" class="index-more">-営業の方はこちら</a>
+                                  <a href="../contact/adoption.html" class="index-more">-採用に関するお問い合わせ</a>
+                                  <a href="../contact/cooperation.html" class="index-more">-業務提携に関するお問い合わせ</a>
+                                  <a href="../contact/interviw.html" class="index-more">-会社・取材に関するお問い合わせ</a>
+                                  <a href="../contact/sales.html" class="index-more">-営業の方はこちら</a>
                                   </div>
                         </li>
                     </ul>
@@ -482,7 +482,7 @@
           <div class="m-arrowBtn m-arrowBtn--sizeL m-arrowBtn--mAuto m-arrowBtn--mt40">
             <a class="m-arrowBtn-hover" href="/inquiry/form03">
               <span class="m-arrowBtn-inline">
-                <span class="m-contact-icon"><img loading="lazy" decoding="async" src="/assets/img/common/contact_icon.svg" alt=""></span>
+                <!-- <span class="m-contact-icon"><img loading="lazy" decoding="async" src="/assets/img/common/contact_icon.svg" alt=""></span> -->
                 採用に関するお問い合わせ
               </span>
             </a>
@@ -572,10 +572,10 @@
             <button class="toggle-btn-footer">＋</button>
         </div>
                 <div class="accordion-content">
-                    <a href="../contact/interviw.html" class="index-more">-会社・取材に関するお問い合わせ</a>
-                    <a href="../contact/adoption.html" class="index-more">-採用に関するお問い合わせ</a>
-                    <a href="../contact/cooperation.html" class="index-more">-業務提携に関するお問い合わせ</a>
-                    <a href="../contact/sales.html" class="index-more">-営業の方はこちら</a>
+                  <a href="../contact/adoption.html" class="index-more">-採用に関するお問い合わせ</a>
+                  <a href="../contact/cooperation.html" class="index-more">-業務提携に関するお問い合わせ</a>
+                  <a href="../contact/interviw.html" class="index-more">-会社・取材に関するお問い合わせ</a>
+                  <a href="../contact/sales.html" class="index-more">-営業の方はこちら</a>
                   </div>
         </li>
     </ul>
