--- a/company.html
+++ b/company.html
@@ -104,9 +104,9 @@
                         <button class="toggle-btn">＋</button>
                     </div>
                             <div class="accordion-content">
+                              <a href="contact/adoption.html" class="index-more">-採用に関するお問い合わせ</a>
+                              <a href="contact/cooperation.html" class="index-more">-業務提携に関するお問い合わせ</a>
                                 <a href="contact/interviw.html" class="index-more">-会社・取材に関するお問い合わせ</a>
-                                <a href="contact/adoption.html" class="index-more">-採用に関するお問い合わせ</a>
-                                <a href="contact/cooperation.html" class="index-more">-業務提携に関するお問い合わせ</a>
                                 <a href="contact/sales.html" class="index-more">-営業の方はこちら</a>
                               </div>
                     </li>
@@ -224,49 +224,14 @@
                   <p class="p-profile__listChildPosition">取締役</p>
                   <p class="p-profile__listChildName">大森 健一</p>
                 </li>
-                <!-- <li class="p-profile__listChildItem">
-                  <p class="p-profile__listChildPosition">取締役</p>
-                  <p class="p-profile__listChildName">松田 英士</p>
-                </li> -->
-                <!-- <li class="p-profile__listChildItem">
-                  <p class="p-profile__listChildPosition">取締役</p>
-                  <p class="p-profile__listChildName">大野　仁之</p>
-                </li>
-                <li class="p-profile__listChildItem">
-                  <p class="p-profile__listChildPosition">取締役（監査等委員）</p>
-                  <p class="p-profile__listChildName">石井　祐輔</p>
-                </li>
-                <li class="p-profile__listChildItem">
-                  <p class="p-profile__listChildPosition">取締役（監査等委員）</p>
-                  <p class="p-profile__listChildName">松岡　一臣</p>
-                </li>
-                <li class="p-profile__listChildItem">
-                  <p class="p-profile__listChildPosition">取締役（監査等委員）</p>
-                  <p class="p-profile__listChildName">大塚　美幸</p>
-                </li>
-                <li class="p-profile__listChildItem">
-                  <p class="p-profile__listChildPosition">取締役（監査等委員）</p>
-                  <p class="p-profile__listChildName">片山　典之</p>
-                </li>
-                <li class="p-profile__listChildItem">
-                  <p class="p-profile__listChildPosition">執行役員</p>
-                  <p class="p-profile__listChildName">馬場　信治</p>
-                </li>
-                <li class="p-profile__listChildItem">
-                  <p class="p-profile__listChildPosition">執行役員</p>
-                  <p class="p-profile__listChildName">両角　元勝</p>
-                </li>
-                <li class="p-profile__listChildItem">
-                  <p class="p-profile__listChildPosition">執行役員</p>
-                  <p class="p-profile__listChildName">望月　進</p>
-                </li> -->
+               
               </ul>
             </div>
           </li>
 
           <li class="p-profile__listItem p-profile__listItem-upper">
             <p class="p-profile__listTtl">顧問弁護士</p>
-            <p class="p-profile__listTxt"></p>
+            <p class="p-profile__listTxt">小野澤法律事務所</p>
           </li>
           <li class="p-profile__listItem p-profile__listItem-upper">
             <p class="p-profile__listTtl">顧問税理士</p>
@@ -1417,10 +1382,10 @@
                   <button class="toggle-btn-footer">＋</button>
               </div>
                       <div class="accordion-content">
-                          <a href="contact/interviw.html" class="index-more">-会社・取材に関するお問い合わせ</a>
-                          <a href="contact/adoption.html" class="index-more">-採用に関するお問い合わせ</a>
-                          <a href="contact/cooperation.html" class="index-more">-業務提携に関するお問い合わせ</a>
-                          <a href="contact/sales.html" class="index-more">-営業の方はこちら</a>
+                        <a href="contact/adoption.html" class="index-more">-採用に関するお問い合わせ</a>
+                        <a href="contact/cooperation.html" class="index-more">-業務提携に関するお問い合わせ</a>
+                        <a href="contact/interviw.html" class="index-more">-会社・取材に関するお問い合わせ</a>
+                        <a href="contact/sales.html" class="index-more">-営業の方はこちら</a>
                         </div>
               </li>
           </ul>
