--- a/adoption/part.html
+++ b/adoption/part.html
@@ -106,10 +106,10 @@
                         <button class="toggle-btn">＋</button>
                     </div>
                             <div class="accordion-content">
-                                <a href="../contact/interviw.html" class="index-more">-会社・取材に関するお問い合わせ</a>
-                                <a href="../contact/adoption.html" class="index-more">-採用に関するお問い合わせ</a>
-                                <a href="../contact/cooperation.html" class="index-more">-業務提携に関するお問い合わせ</a>
-                                <a href="../contact/sales.html" class="index-more">-営業の方はこちら</a>
+                              <a href="../contact/adoption.html" class="index-more">-採用に関するお問い合わせ</a>
+                              <a href="../contact/cooperation.html" class="index-more">-業務提携に関するお問い合わせ</a>
+                              <a href="../contact/interviw.html" class="index-more">-会社・取材に関するお問い合わせ</a>
+                              <a href="../contact/sales.html" class="index-more">-営業の方はこちら</a>
                               </div>
                     </li>
                 </ul>
@@ -409,7 +409,7 @@
                       <div class="m-arrowBtn m-arrowBtn--sizeL">
                         <a class="m-arrowBtn-hover" href="/inquiry/form03">
                           <span class="m-arrowBtn-inline">
-                            <span class="m-contact-icon"><img loading="lazy" decoding="async" src="/assets/img/common/contact_icon.svg" alt=""></span>
+                            <!-- <span class="m-contact-icon"><img loading="lazy" decoding="async" src="/assets/img/common/contact_icon.svg" alt=""></span> -->
                             採用に関するお問い合わせ
                           </span>
                         </a>
@@ -502,10 +502,10 @@
                 <button class="toggle-btn-footer">＋</button>
             </div>
                     <div class="accordion-content">
-                        <a href="../contact/interviw.html" class="index-more">-会社・取材に関するお問い合わせ</a>
-                        <a href="../contact/adoption.html" class="index-more">-採用に関するお問い合わせ</a>
-                        <a href="../contact/cooperation.html" class="index-more">-業務提携に関するお問い合わせ</a>
-                        <a href="../contact/sales.html" class="index-more">-営業の方はこちら</a>
+                      <a href="../contact/adoption.html" class="index-more">-採用に関するお問い合わせ</a>
+                      <a href="../contact/cooperation.html" class="index-more">-業務提携に関するお問い合わせ</a>
+                      <a href="../contact/interviw.html" class="index-more">-会社・取材に関するお問い合わせ</a>
+                      <a href="../contact/sales.html" class="index-more">-営業の方はこちら</a>
                       </div>
             </li>
         </ul>
