--- a/index.html
+++ b/index.html
@@ -3204,10 +3204,10 @@
                                     <button class="toggle-btn">＋</button>
                                 </div>
                                         <div class="accordion-content">
-                                            <a href="contact.html#form1" class="index-more">-会社・取材に関するお問い合わせ</a>
-                                            <a href="company.html#form2" class="index-more">-採用に関するお問い合わせ</a>
-                                            <a href="contact.html#form3" class="index-more">-業務提携に関するお問い合わせ</a>
-                                            <a href="contact.html#form4" class="index-more">-営業の方はこちら</a>
+                                            <a href="contact/adoption.html" class="index-more">-採用に関するお問い合わせ</a>
+                                            <a href="contact/cooperation.html" class="index-more">-業務提携に関するお問い合わせ</a>
+                                            <a href="contact/interviw.html" class="index-more">-会社・取材に関するお問い合わせ</a>
+                                            <a href="contact/sales.html" class="index-more">-営業の方はこちら</a>
                                           </div>
                                 </li>
                             </ul>
@@ -3666,9 +3666,9 @@
                         <button class="toggle-btn-footer">＋</button>
                     </div>
                             <div class="accordion-content">
-                                <a href="contact/interviw.html" class="index-more">-会社・取材に関するお問い合わせ</a>
                                 <a href="contact/adoption.html" class="index-more">-採用に関するお問い合わせ</a>
                                 <a href="contact/cooperation.html" class="index-more">-業務提携に関するお問い合わせ</a>
+                                <a href="contact/interviw.html" class="index-more">-会社・取材に関するお問い合わせ</a>
                                 <a href="contact/sales.html" class="index-more">-営業の方はこちら</a>
                               </div>
                     </li>
