--- a/business.html
+++ b/business.html
@@ -3080,6 +3080,7 @@
         <link rel="stylesheet" href="css/transit4.css">
         <link rel="stylesheet" href="css/transit5.css">
         <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/business.css">
         <link rel="icon" href="img/Rewrite_logo_only.png">
     </head>
     <body class="page-template page-template-page-templates page-template-one-column page-template-page-templatesone-column-php page page-id-2 wp-custom-logo l-body--one-column l-body" id="body" data-has-sidebar="false" data-is-full-template="false" data-is-slim-width="false" data-header-layout="1row" ontouchstart="">
@@ -3256,7 +3257,7 @@
                                     <div class="c-entry__body">
                                         <div class="c-entry__content p-entry-content">
                                             <div class="wp-block-snow-monkey-blocks-section smb-section smb-section--fit thd_mod-lower_header thd_our_business__header">
-                                                <div class="smb-section__inner">
+                                                <div class="smb-section__inner smb-section__inner-2">
                                                     <div class="c-container">
                                                         <div class="smb-section__contents-wrapper">
                                                             <div class="smb-section__header">
@@ -3275,7 +3276,7 @@
                                                 </div>
                                             </div>
                                             <div class="wp-block-snow-monkey-blocks-section smb-section smb-section--fit thd_our_business__sec --1">
-                                                <div class="smb-section__inner">
+                                                <div class="smb-section__inner smb-section__inner-2">
                                                     <div class="c-container">
                                                         <div class="smb-section__contents-wrapper">
                                                             <div class="smb-section__body is-layout-constrained wp-block-section-is-layout-constrained">
@@ -3312,7 +3313,7 @@
                                                 </div>
                                             </div>
                                             <div class="wp-block-snow-monkey-blocks-section smb-section smb-section--fit thd_our_business__sec --2">
-                                                <div class="smb-section__inner">
+                                                <div class="smb-section__inner smb-section__inner-2">
                                                     <div class="c-container">
                                                         <div class="smb-section__contents-wrapper">
                                                             <div class="smb-section__body is-layout-constrained wp-block-section-is-layout-constrained">
@@ -3385,7 +3386,7 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="wp-block-snow-monkey-blocks-section smb-section smb-section--fit thd_our_business__sec --3">
+                                            <div class="wp-block-snow-monkey-blocks-section smb-section smb-section--fit thd_our_business__sec --3 business-underline">
                                                 <div class="smb-section__inner">
                                                     <div class="c-container">
                                                         <div class="smb-section__contents-wrapper">
