--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,7 @@
       rel="stylesheet">
       <link rel="stylesheet" href="css/style.css">
       <link rel="stylesheet" href="css/form.css">
+      <link rel="stylesheet" href="css/contact.css">
     <title>お問い合わせ</title>
     <link rel="icon" href="img/Rewrite_logo_only.png" type="image/png">
 </head>
