--- a/company/message.html
+++ b/company/message.html
@@ -540,7 +540,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div class="c-entry__content p-entry-content">
 	
 	
-<div class="wp-block-snow-monkey-blocks-section smb-section smb-section--fit thd_mod-lower_header"><div class="smb-section__inner"><div class="c-container"><div class="smb-section__contents-wrapper"><div class="smb-section__header"><h1 class="smb-section__title">COMPANY</h1><div class="smb-section__lede-wrapper"><div class="smb-section__lede">会社情報</div></div></div><div class="smb-section__body is-layout-constrained wp-block-section-is-layout-constrained"></div></div></div></div></div>
+<div class="wp-block-snow-monkey-blocks-section smb-section smb-section--fit thd_mod-lower_header"><div class="smb-section__inner "><div class="c-container"><div class="smb-section__contents-wrapper"><div class="smb-section__header"><h1 class="smb-section__title">COMPANY</h1><div class="smb-section__lede-wrapper"><div class="smb-section__lede">会社情報</div></div></div><div class="smb-section__body is-layout-constrained wp-block-section-is-layout-constrained"></div></div></div></div></div>
 
 
 
@@ -578,7 +578,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 
-<div class="wp-block-snow-monkey-blocks-section smb-section smb-section--fit thd_top-message js-inview"><div class="smb-section__inner"><div class="c-container"><div class="smb-section__contents-wrapper"><div class="smb-section__header"><h2 class="smb-section__title">TOP MESSAGE</h2><div class="smb-section__lede-wrapper"><div class="smb-section__lede">代表挨拶</div></div></div><div class="smb-section__body is-layout-constrained wp-block-section-is-layout-constrained">
+<div class="wp-block-snow-monkey-blocks-section smb-section smb-section--fit thd_top-message js-inview"><div class="smb-section__inner smb-section__inner-2"><div class="c-container"><div class="smb-section__contents-wrapper"><div class="smb-section__header"><h2 class="smb-section__title">TOP MESSAGE</h2><div class="smb-section__lede-wrapper"><div class="smb-section__lede">代表挨拶</div></div></div><div class="smb-section__body is-layout-constrained wp-block-section-is-layout-constrained">
 <div class="wp-block-columns thd_top-message__content is-layout-flex wp-container-core-columns-is-layout-1 wp-block-columns-is-layout-flex wp-block-columns-message">
 <div class="wp-block-column thd_top-message__detail is-layout-flow wp-block-column-is-layout-flow">
 <h2 class="wp-block-heading is-style-plain thd_top-message__copy">未来を切り拓き、日本中を元気にしたい！
