--- a/adoption.html
+++ b/adoption.html
@@ -52,17 +52,17 @@
                     <ul class="index-main">
                         <li>
                             <div class="accordion">
-                            <a class="index-text" href="company.html">会社情報 <span class="index-text-english">COMPANY</span>
+                            <a class="index-text" href="company.html"> <span class="index-text-english">COMPANY</span>
                             </a>
                             <button class="toggle-btn">＋</button>
                             </div>
                                     <div class="accordion-content">
-                                        <a href="company.html" class="index-more">-会社概要</a>
-                                        <a href="company/message.html" class="index-more">-代表挨拶</a>
-                                        <a href="company/mission.html" class="index-more">-経営理念&企業理念</a>
-                                        <a href="company.html#exective-members" class="index-more">-グループ役員一覧</a>
-                                        <a href="company.html#group-companys" class="index-more">-グループ企業一覧</a>
-                                        <a href="company/partnar.html" class="index-more">-提携先企業一覧</a>
+                                        <a href="company.html" class="index-more">会社概要</a>
+                                        <a href="company/message.html" class="index-more">代表挨拶</a>
+                                        <a href="company/mission.html" class="index-more">経営理念&企業理念</a>
+                                        <a href="company.html#exective-members" class="index-more">グループ役員一覧</a>
+                                        <a href="company.html#group-companys" class="index-more">グループ企業一覧</a>
+                                        <a href="company/partnar.html" class="index-more">提携先企業一覧</a>
                                       </div>
                         </li>
                     </ul>
@@ -82,9 +82,9 @@
                             <button class="toggle-btn">＋</button>
                         </div>
                                 <div class="accordion-content">
-                                    <a href="adoption/executive.html" class="index-more">-経営幹部採用</a>
-                                    <a href="adoption/employee.html" class="index-more">-社員採用</a>
-                                    <a href="adoption/part.html" class="index-more">-アルバイト採用</a>
+                                    <a href="adoption/executive.html" class="index-more">経営幹部採用</a>
+                                    <a href="adoption/employee.html" class="index-more">社員採用</a>
+                                    <a href="adoption/part.html" class="index-more">アルバイト採用</a>
                                   </div>
                         </li>
                     </ul>
@@ -103,10 +103,10 @@
                             <button class="toggle-btn">＋</button>
                         </div>
                                 <div class="accordion-content">
-                                  <a href="contact/adoption.html" class="index-more">-採用に関するお問い合わせ</a>
-                                  <a href="contact/cooperation.html" class="index-more">-業務提携に関するお問い合わせ</a>
-                                    <a href="contact/interviw.html" class="index-more">-会社・取材に関するお問い合わせ</a>
-                                    <a href="contact/sales.html" class="index-more">-営業の方はこちら</a>
+                                  <a href="contact/adoption.html" class="index-more">採用に関するお問い合わせ</a>
+                                  <a href="contact/cooperation.html" class="index-more">業務提携に関するお問い合わせ</a>
+                                    <a href="contact/interviw.html" class="index-more">会社・取材に関するお問い合わせ</a>
+                                    <a href="contact/sales.html" class="index-more">営業の方はこちら</a>
                                   </div>
                         </li>
                     </ul>
@@ -303,12 +303,12 @@
             <button class="toggle-btn-footer">＋</button>
             </div>
                     <div class="accordion-content">
-                        <a href="company.html" class="index-more">-会社概要</a>
-                        <a href="company/message.html" class="index-more">-代表挨拶</a>
-                        <a href="company/mission.html" class="index-more">-経営理念&企業理念</a>
-                        <a href="company.html#exective-members" class="index-more">-グループ役員一覧</a>
-                        <a href="company.html#group-companys" class="index-more">-グループ企業一覧</a>
-                        <a href="company/partnar.html" class="index-more">-提携先企業一覧</a>
+                        <a href="company.html" class="index-more">会社概要</a>
+                        <a href="company/message.html" class="index-more">代表挨拶</a>
+                        <a href="company/mission.html" class="index-more">経営理念&企業理念</a>
+                        <a href="company.html#exective-members" class="index-more">グループ役員一覧</a>
+                        <a href="company.html#group-companys" class="index-more">グループ企業一覧</a>
+                        <a href="company/partnar.html" class="index-more">提携先企業一覧</a>
                       </div>
         </li>
     </ul>
@@ -328,9 +328,9 @@
             <button class="toggle-btn-footer">＋</button>
         </div>
                 <div class="accordion-content">
-                    <a href="adoption/executive.html" class="index-more">-経営幹部採用</a>
-                    <a href="adoption/employee.html" class="index-more">-社員採用</a>
-                    <a href="adoption/part.html" class="index-more">-アルバイト採用</a>
+                    <a href="adoption/executive.html" class="index-more">経営幹部採用</a>
+                    <a href="adoption/employee.html" class="index-more">社員採用</a>
+                    <a href="adoption/part.html" class="index-more">アルバイト採用</a>
                   </div>
         </li>
     </ul>
@@ -349,10 +349,10 @@
             <button class="toggle-btn-footer">＋</button>
         </div>
                 <div class="accordion-content">
-                  <a href="contact/adoption.html" class="index-more">-採用に関するお問い合わせ</a>
-                  <a href="contact/cooperation.html" class="index-more">-業務提携に関するお問い合わせ</a>
-                    <a href="contact/interviw.html" class="index-more">-会社・取材に関するお問い合わせ</a>
-                    <a href="contact/sales.html" class="index-more">-営業の方はこちら</a>
+                  <a href="contact/adoption.html" class="index-more">採用に関するお問い合わせ</a>
+                  <a href="contact/cooperation.html" class="index-more">業務提携に関するお問い合わせ</a>
+                    <a href="contact/interviw.html" class="index-more">会社・取材に関するお問い合わせ</a>
+                    <a href="contact/sales.html" class="index-more">営業の方はこちら</a>
                   </div>
         </li>
     </ul>
