--- a/company/group.html
+++ b/company/group.html
@@ -444,12 +444,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <button class="toggle-btn">＋</button>
                                 </div>
                                         <div class="accordion-content">
-                                          <a href="../company.html" class="index-more">-会社概要</a>
-                                            <a href="../company/message.html" class="index-more">-代表挨拶</a>
-                                            <a href="../company/mission.html" class="index-more">-経営理念&企業理念</a>
-                                            <a href="../company.html#exective-members" class="index-more">-グループ役員一覧</a>
-                                            <a href="../company.html#group-companys" class="index-more">-グループ企業一覧</a>
-                                            <a href="../company/partnar.html" class="index-more">-提携先企業一覧</a>
+                                          <a href="../company.html" class="index-more">会社概要</a>
+                                            <a href="../company/message.html" class="index-more">代表挨拶</a>
+                                            <a href="../company/mission.html" class="index-more">経営理念&企業理念</a>
+                                            <a href="../company.html#exective-members" class="index-more">グループ役員一覧</a>
+                                            <a href="../company.html#group-companys" class="index-more">グループ企業一覧</a>
+                                            <a href="../company/partnar.html" class="index-more">提携先企業一覧</a>
                                           </div>
                             </li>
                         </ul>
@@ -474,9 +474,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <button class="toggle-btn">＋</button>
                             </div>
                                     <div class="accordion-content">
-                                        <a href="../adoption/executive.html" class="index-more">-経営幹部採用</a>
-                                        <a href="../adoption/employee.html" class="index-more">-社員採用</a>
-                                        <a href="../adoption/part.html" class="index-more">-アルバイト採用</a>
+                                        <a href="../adoption/executive.html" class="index-more">経営幹部採用</a>
+                                        <a href="../adoption/employee.html" class="index-more">社員採用</a>
+                                        <a href="../adoption/part.html" class="index-more">アルバイト採用</a>
                                       </div>
                             </li>
                         </ul>
@@ -495,10 +495,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <button class="toggle-btn">＋</button>
                             </div>
                                     <div class="accordion-content">
-                                        <a href="../contact/adoption.html" class="index-more">-採用に関するお問い合わせ</a>
-                                        <a href="../contact/cooperation.html" class="index-more">-業務提携に関するお問い合わせ</a>
-                                        <a href="../contact/interviw.html" class="index-more">-会社・取材に関するお問い合わせ</a>
-                                        <a href="../contact/sales.html" class="index-more">-営業の方はこちら</a>
+                                        <a href="../contact/adoption.html" class="index-more">採用に関するお問い合わせ</a>
+                                        <a href="../contact/cooperation.html" class="index-more">業務提携に関するお問い合わせ</a>
+                                        <a href="../contact/interviw.html" class="index-more">会社・取材に関するお問い合わせ</a>
+                                        <a href="../contact/sales.html" class="index-more">営業の方はこちら</a>
                                       </div>
                             </li>
                         </ul>
@@ -835,12 +835,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <button class="toggle-btn-footer">＋</button>
             </div>
                     <div class="accordion-content">
-                        <a href="../company.html" class="index-more">-会社概要</a>
-                        <a href="../company/message.html" class="index-more">-代表挨拶</a>
-                        <a href="../company/mission.html" class="index-more">-経営理念&企業理念</a>
-                        <a href="../company.html#exective-members" class="index-more">-グループ役員一覧</a>
-                        <a href="../company.html#group-companys" class="index-more">-グループ企業一覧</a>
-                        <a href="../company/partnar.html" class="index-more">-提携先企業一覧</a>
+                        <a href="../company.html" class="index-more">会社概要</a>
+                        <a href="../company/message.html" class="index-more">代表挨拶</a>
+                        <a href="../company/mission.html" class="index-more">経営理念&企業理念</a>
+                        <a href="../company.html#exective-members" class="index-more">グループ役員一覧</a>
+                        <a href="../company.html#group-companys" class="index-more">グループ企業一覧</a>
+                        <a href="../company/partnar.html" class="index-more">提携先企業一覧</a>
                       </div>
         </li>
     </ul>
@@ -860,9 +860,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <button class="toggle-btn-footer">＋</button>
         </div>
                 <div class="accordion-content">
-                    <a href="../adoption/executive.html" class="index-more">-経営幹部採用</a>
-                    <a href="../adoption/employee.html" class="index-more">-社員採用</a>
-                    <a href="../adoption/part.html" class="index-more">-アルバイト採用</a>
+                    <a href="../adoption/executive.html" class="index-more">経営幹部採用</a>
+                    <a href="../adoption/employee.html" class="index-more">社員採用</a>
+                    <a href="../adoption/part.html" class="index-more">アルバイト採用</a>
                   </div>
         </li>
     </ul>
@@ -881,10 +881,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <button class="toggle-btn-footer">＋</button>
         </div>
                 <div class="accordion-content">
-                    <a href="../contact/adoption.html" class="index-more">-採用に関するお問い合わせ</a>
-                    <a href="../contact/cooperation.html" class="index-more">-業務提携に関するお問い合わせ</a>
-                    <a href="../contact/interviw.html" class="index-more">-会社・取材に関するお問い合わせ</a>
-                    <a href="../contact/sales.html" class="index-more">-営業の方はこちら</a>
+                    <a href="../contact/adoption.html" class="index-more">採用に関するお問い合わせ</a>
+                    <a href="../contact/cooperation.html" class="index-more">業務提携に関するお問い合わせ</a>
+                    <a href="../contact/interviw.html" class="index-more">会社・取材に関するお問い合わせ</a>
+                    <a href="../contact/sales.html" class="index-more">営業の方はこちら</a>
                   </div>
         </li>
     </ul>
