--- a/index/privacy-policy.html
+++ b/index/privacy-policy.html
@@ -117,12 +117,12 @@ rel="stylesheet">
                             <button class="toggle-btn">＋</button>
                             </div>
                                     <div class="accordion-content">
-                                        <a href="../company/message.html" class="index-more">-グループCEOメッセージ</a>
-                                        <a href="../company/mission.html" class="index-more">-経営理念&企業理念</a>
+                                        <a href="../company/message.html" class="index-more">グループCEOメッセージ</a>
+                                        <a href="../company/mission.html" class="index-more">経営理念&企業理念</a>
                                         <a href="../company.html#exective-members" class="index-more">-グループ役員一覧</a>
-                                        <a href="../company.html" class="index-more">-会社概要</a>
-                                        <a href="../company.html#group-companys" class="index-more">-グループ会社一覧</a>
-                                        <a href="../company/partnar.html" class="index-more">-提携先企業一覧</a>
+                                        <a href="../company.html" class="index-more">会社概要</a>
+                                        <a href="../company.html#group-companys" class="index-more">グループ会社一覧</a>
+                                        <a href="../company/partnar.html" class="index-more">提携先企業一覧</a>
                                       </div>
                         </li>
                     </ul>
@@ -147,11 +147,11 @@ rel="stylesheet">
                             <button class="toggle-btn">＋</button>
                         </div>
                                 <div class="accordion-content">
-                                    <a href="../adoption/executive.html" class="index-more">-経営幹部採用</a>
-                                    <a href="../adoption/employee.html" class="index-more">-社員採用</a>
-                                    <a href="../adoption/part.html" class="index-more">-アルバイト採用</a>
+                                    <a href="../adoption/executive.html" class="index-more">経営幹部採用</a>
+                                    <a href="../adoption/employee.html" class="index-more">社員採用</a>
+                                    <a href="../adoption/part.html" class="index-more">アルバイト採用</a>
                                   </div>
-                        </li>
+                        </li
                     </ul>
                     <ul class="index-main">
                         <li>
@@ -168,10 +168,10 @@ rel="stylesheet">
                             <button class="toggle-btn">＋</button>
                         </div>
                                 <div class="accordion-content">
-                                    <a href="../contact/interviw.html" class="index-more">-会社、取材に関するお問い合わせ</a>
-                                    <a href="../contact/adoption.html" class="index-more">-採用に関するお問い合わせ</a>
-                                    <a href="../contact/cooperation.html" class="index-more">-業務提携に関するお問い合わせ</a>
-                                    <a href="../contact/sales.html" class="index-more">-営業の方はこちら</a>
+                                    <a href="../contact/interviw.html" class="index-more">会社、取材に関するお問い合わせ</a>
+                                    <a href="../contact/adoption.html" class="index-more">採用に関するお問い合わせ</a>
+                                    <a href="../contact/cooperation.html" class="index-more">業務提携に関するお問い合わせ</a>
+                                    <a href="../contact/sales.html" class="index-more">営業の方はこちら</a>
                                   </div>
                         </li>
                     </ul>
@@ -330,12 +330,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <button class="toggle-btn-footer">＋</button>
             </div>
                     <div class="accordion-content">
-                        <a href="../company.html" class="index-more">-会社概要</a>
-                        <a href="../company/message.html" class="index-more">-代表挨拶</a>
-                        <a href="../company/mission.html" class="index-more">-経営理念&企業理念</a>
-                        <a href="../company.html#exective-members" class="index-more">-グループ役員一覧</a>
-                        <a href="../company.html#group-companys" class="index-more">-グループ企業一覧</a>
-                        <a href="../company/partnar.html" class="index-more">-提携先企業一覧</a>
+                        <a href="../company.html" class="index-more">会社概要</a>
+                        <a href="../company/message.html" class="index-more">代表挨拶</a>
+                        <a href="../company/mission.html" class="index-more">経営理念&企業理念</a>
+                        <a href="../company.html#exective-members" class="index-more">グループ役員一覧</a>
+                        <a href="../company.html#group-companys" class="index-more">グループ企業一覧</a>
+                        <a href="../company/partnar.html" class="index-more">提携先企業一覧</a>
                       </div>
         </li>
     </ul>
@@ -355,9 +355,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <button class="toggle-btn-footer">＋</button>
         </div>
                 <div class="accordion-content">
-                    <a href="../adoption/executive.html" class="index-more">-経営幹部採用</a>
-                    <a href="../adoption/employee.html" class="index-more">-社員採用</a>
-                    <a href="../adoption/part.html" class="index-more">-アルバイト採用</a>
+                    <a href="../adoption/executive.html" class="index-more">経営幹部採用</a>
+                    <a href="../adoption/employee.html" class="index-more">社員採用</a>
+                    <a href="../adoption/part.html" class="index-more">アルバイト採用</a>
                   </div>
         </li>
     </ul>
@@ -376,10 +376,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <button class="toggle-btn-footer">＋</button>
         </div>
                 <div class="accordion-content">
-                    <a href="../contact/interviw.html" class="index-more">-会社・取材に関するお問い合わせ</a>
-                    <a href="../contact/adoption.html" class="index-more">-採用に関するお問い合わせ</a>
-                    <a href="../contact/cooperation.html" class="index-more">-業務提携に関するお問い合わせ</a>
-                    <a href="../contact/sales.html" class="index-more">-営業の方はこちら</a>
+                    <a href="../contact/interviw.html" class="index-more">会社・取材に関するお問い合わせ</a>
+                    <a href="../contact/adoption.html" class="index-more">採用に関するお問い合わせ</a>
+                    <a href="../contact/cooperation.html" class="index-more">業務提携に関するお問い合わせ</a>
+                    <a href="../contact/sales.html" class="index-more">営業の方はこちら</a>
                   </div>
         </li>
     </ul>
