--- a/adoption.html
+++ b/adoption.html
@@ -52,7 +52,7 @@
                     <ul class="index-main">
                         <li>
                             <div class="accordion">
-                            <a class="index-text" href="company.html"> <span class="index-text-english">COMPANY</span>
+                            <a class="index-text" href="company.html">会社情報 <span class="index-text-english">COMPANY</span>
                             </a>
                             <button class="toggle-btn">＋</button>
                             </div>
@@ -155,8 +155,8 @@
               <a class="m-circleBtn-element" href="adoption/executive.html">
                 <div class="m-bnrList__img">
                   <picture>
-                    <source media="(max-width:750px)" srcset="https://placehold.jp/345x125.png">
-                    <img loading="lazy" decoding="async" src="https://placehold.jp/560x200.png" alt="経営幹部採用">
+                    <source media="(max-width:750px)" srcset="img/recruit-exective-main.jpg">
+                    <img loading="lazy" decoding="async" src="img/recruit-exective-main.jpg" alt="経営幹部採用">
                   </picture>
                 </div>
                 <h2 class="m-bnrList__ttl m-bnrList__ttl--sizeL">
@@ -170,8 +170,8 @@
               <a class="m-circleBtn-element" href="adoption/employee.html">
                 <div class="m-bnrList__img">
                   <picture>
-                    <source media="(max-width:750px)" srcset="https://placehold.jp/345x125.png">
-                    <img loading="lazy" decoding="async" src="https://placehold.jp/560x200.png" alt="社員採用">
+                    <source media="(max-width:750px)" srcset="img/recruit-inner-2-main.jpg">
+                    <img loading="lazy" decoding="async" src="img/recruit-inner-2-main.jpg" alt="社員採用">
                   </picture>
                 </div>
                 <h2 class="m-bnrList__ttl m-bnrList__ttl--sizeL">
@@ -185,8 +185,8 @@
               <a class="m-circleBtn-element" href="adoption/part.html">
                 <div class="m-bnrList__img">
                   <picture>
-                    <source media="(max-width:750px)" srcset="https://placehold.jp/345x125.png">
-                    <img loading="lazy" decoding="async" src="https://placehold.jp/560x200.png" alt="アルバイト採用">
+                    <source media="(max-width:750px)" srcset="img/recruit-inner-3-main.jpg">
+                    <img loading="lazy" decoding="async" src="img/recruit-inner-3-main.jpg" alt="アルバイト採用">
                   </picture>
                 </div>
                 <h2 class="m-bnrList__ttl m-bnrList__ttl--sizeL">
@@ -263,8 +263,8 @@
     <div class="wp-block-snow-monkey-blocks-btn-box smb-btn-box thd_mod-bottom_next_link">
       <div class="c-container">
           <div class="smb-btn-box__btn-wrapper-recruit">
-              <a class="smb-btn smb-btn--full" href="adoption.html" style="--smb-btn--background-color:var(--_color-white);--smb-btn--color:var(--accent-color)">
-                  <span class="smb-btn__label">NEXT　/　CONTACT</span>
+              <a class="smb-btn smb-btn--full" href="contact.html" style="--smb-btn--background-color:var(--_color-white);--smb-btn--color:var(--accent-color)">
+                <img src="img/next/next-contact.png" class="next-img" alt="">
               </a>
           </div>
       </div>
