--- a/business.html
+++ b/business.html
@@ -3446,7 +3446,7 @@
                                                 <div class="c-container">
                                                     <div class="smb-btn-box__btn-wrapper">
                                                         <a class="smb-btn smb-btn--full" href="adoption.html" style="--smb-btn--background-color:var(--_color-white);--smb-btn--color:var(--accent-color)">
-                                                            <span class="smb-btn__label">NEXT　/　RECRUIT</span>
+                                                            <img src="img/next/next-recruit.png" class="next-img" alt="">
                                                         </a>
                                                     </div>
                                                 </div>
