--- a/company.html
+++ b/company.html
@@ -1317,7 +1317,7 @@
               <div class="c-container">
                 <div class="smb-btn-box__btn-wrapper">
                   <a class="smb-btn smb-btn--full" href="company/message.html" style="--smb-btn--background-color:var(--_color-white);--smb-btn--color:var(--accent-color)">
-                    <span class="smb-btn__label">NEXT　/　TOP MESSAGE</span>
+                    <img src="img/next/next-topmessage.png" class="next-img" alt="">
                   </a>
                 </div>
               </div>
